# promptastic

./: .gitignore  README.md  pyproject.toml
docs/: guide.html  index.html  optimize.html
examples/: conversations.json  regions.json  regions_unstructured.json  system_prompt.txt  system_prompt_unstructured.txt
examples/optimize/: conversations.json  regions.json  system_prompt_v0.txt  system_prompt_v3_optimized.txt  targets.json
src/promptastic/: _types.py  constants.py
src/promptastic/analysis/: causal.py  compare.py  feature_analysis.py  formatting.py  head_analysis.py  metrics.py  report.py
src/promptastic/engine/: __init__.py  captures.py  generation.py  gradients.py  hooks.py  model_adapter.py  patching.py  runner.py  sae.py  tokenization.py  tuned_lens.py
src/promptastic/optimize/: __init__.py  _types.py  diagnostics.py  extract.py  insights.py  loop.py  meta_rewriter.py  mutations.py  policy.py  profiles.py  response_capture.py  rewriter.py  score.py  split.py  structure.py  (+2 more)
tests/: test_constants.py
tests/analysis/: test_causal.py  test_compare.py  test_formatting.py  test_head_analysis.py  test_metrics.py  test_report.py
tests/engine/: test_captures.py  test_hooks.py  test_model_adapter.py
tests/optimize/: test_diagnostics.py  test_extract.py  test_insights.py  test_loop.py  test_meta_rewriter.py  test_mutations.py  test_prompt_spec.py  test_score.py  test_split.py  test_structure.py  test_targets.py  test_types.py  test_verification.py
tests/prep/: test_inputs.py  test_regions.py
tests/render/: test_cooking_curves.py  test_shared.py
(+13 files in other folders)
